--- a/views/groups.html
+++ b/views/groups.html
@@ -223,7 +223,12 @@ $(document).ready(function () {
           </li>
 		  <li class="govuk-header__navigation-item">
             <a class="govuk-header__link" href="gpo">
-              Group Policy Reports
+              GPO Reports
+            </a>
+          </li>
+		  <li class="govuk-header__navigation-item">
+            <a class="govuk-header__link" href="scheduling">
+              Scheduling
             </a>
           </li>
         </ul>
