--- a/views/gpo.html
+++ b/views/gpo.html
@@ -190,7 +190,12 @@ $(document).ready(function () {
           </li>
 		  <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
             <a class="govuk-header__link" href="gpo">
-              Group Policy Reports
+              GPO Reports
+            </a>
+          </li>
+		  <li class="govuk-header__navigation-item">
+            <a class="govuk-header__link" href="scheduling">
+              Scheduling
             </a>
           </li>
         </ul>
