--- a/views/reports.html
+++ b/views/reports.html
@@ -210,7 +210,12 @@ $(document).ready(function () {
           </li>
 		  <li class="govuk-header__navigation-item">
             <a class="govuk-header__link" href="gpo">
-              Group Policy Reports
+              GPO Reports
+            </a>
+          </li>
+		  <li class="govuk-header__navigation-item">
+            <a class="govuk-header__link" href="scheduling">
+              Scheduling
             </a>
           </li>
         </ul>
