--- a/views/gpo.html
+++ b/views/gpo.html
@@ -73,7 +73,7 @@ $(document).ready(function () {
 				t+='<thead class="govuk-table__head">';			
 				t+='<tr class="govuk-table__row">';
 				t+='<th scope="col" class="govuk-table__header">Name</th>';
-				t+='<th scope="col" class="govuk-table__header">Description</th>';
+				//t+='<th scope="col" class="govuk-table__header">Description</th>';
 				t+='</tr></thead>';
 				
 				
@@ -88,7 +88,7 @@ $(document).ready(function () {
 					var modificationTime = parseDate(result["gpo"][i]["ModificationTime"]);
 					var gpoStatus = result["gpo"][i]["GpoStatus"];
 					var description = result["gpo"][i]["Description"];
-					
+					var gpoDetail = result["gpo"][i]["GPODetail"];
 					
 					t+='<tr class="govuk-table__row">';
 					t+="<td class='govuk-table__cell'>";
@@ -100,20 +100,28 @@ $(document).ready(function () {
 					t+='</summary>';
 					t+='<div class="govuk-details__text">';
 					t+='<ul class="govuk-list govuk-list">';
+					/*
 					t+='<li><b>Owner</b>: ' + owner + '</li>';
 					t+='<li><b>Domain Name</b>: ' + domainName + '</li>';
 					t+='<li><b>Created</b>: ' + creationTime + '</li>';
 					t+='<li><b>Last Modified</b>: ' + modificationTime  + '</li>';
 					t+='<li><b>Status</b>: ' + gpoStatus + '</li>';
+					t+='<li>' + gpoDetail + '</li>';
 					
 					t+='</ul>';
+					*/
+					t+=gpoDetail;
 					t+='</div>';
 					t+='</details>';
-					t+="</td><td class='govuk-table__cell'>" + description + "</td>";
+					//t+="</td><td class='govuk-table__cell'>" + description + "</td>";
 					
 					t+='</tr>';
 					userDetails = [displayName,owner,domainName,creationTime,modificationTime,gpoStatus,description];
 					data.push(userDetails); 
+					
+					
+					
+					
 					totalCount++;
 				}
 				t+="<tr><td>Total Count =  " + totalCount + "</td></tr>";
