--- a/views/index.html
+++ b/views/index.html
@@ -189,7 +189,7 @@ $(document).ready(function () {
 	<label class="govuk-label" for="hostname">
       Hostname or IP Address of Domain Controller
     </label>
-    <input class="govuk-input govuk-input--width-10" id="hostname" name="hostname" value="10.85.192.39" type="text"></div>
+    <input class="govuk-input govuk-input--width-10" id="hostname" name="hostname" type="text"></div>
 </fieldset>
 
 <button id="submit" class="govuk-button" data-module="govuk-button">
