--- a/views/groups.html
+++ b/views/groups.html
@@ -2,7 +2,7 @@
 <head>
 <title>Active Directory Audit Tool</title>
 <link rel="stylesheet" type="text/css" href="/styles/govuk-frontend-3.10.2.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="/javascript/jquery.min.js"></script>
 <script src="/javascript/ad.js"></script>
 <script>
 $(document).ready(function () {
